--- a/src/GlacierCrates.Wpf/GlacierCrates.Wpf.csproj
+++ b/src/GlacierCrates.Wpf/GlacierCrates.Wpf.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Windows" />
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -51,9 +52,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controls\SlideDestinationDirection.cs" />
+    <Compile Include="Controls\TransContentControl.xaml.cs">
+      <DependentUpon>TransContentControl.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Controls\TransitingContentControl.cs" />
     <Compile Include="Controls\Transition.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PropertyChangedBase.cs" />
+    <Compile Include="UiElementRenderer.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="FodyWeavers.xml">
@@ -62,6 +68,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Page Include="Controls\TransContentControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Fody.1.29.3\build\dotnet\Fody.targets" Condition="Exists('..\packages\Fody.1.29.3\build\dotnet\Fody.targets')" />
